syntax="proto3";

enum A4AContentType
{
	Email=0;
}

enum A4AUserType
{
	Admin=0;
	User=1;
	Expert=2;
}

enum A4AMailboxType
{
	None=0;
	Inbox=1;
	Sent=2;
	Trash=3;
	Draft=4;
}

message A4AAuthenticationAccount
{
	string Email =1;

	int32 Code1 = 2;
	int32 Code2 = 3;
	int32 Code3 = 4;
	int32 Code4 = 5;

	A4AUserType UserType = 7;

	string Name = 9;
}

message A4ACompany
{
	// this is the party identifier
	string CompanyName = 1;
	string Address1 = 10;
	string Address2 = 11;
	string Country = 12;
	string Postcode = 13;
	string Telephone = 15;
	string Website=16;
	string MainColour=17;
	string SecondaryColour=18;
	string TertiaryColour=19;
	string Logo = 20;
	
}

enum A4AUserStatus
{
	Active=0;
	Suspended=1;
}

enum A4AAdminLevel
{
	Administrator=0;
	Moderator=1;
}

message A4AEmailService
{
	string ServiceName = 1;
	string ApiUserName= 2;
	string ApiPassword = 3;
	string Uri = 4;
	string Domain = 5;

	int64 lastPollTime = 6;

	int64 delayMilliseconds = 7;

	// we look further back than our delay time
	// in case we miss events need to discard repeated
	int64 lookbackMilliseconds = 8;
	
}

message A4AAdministrator
{
	string AdministratorName = 1;
	string Email = 2;
	A4AAdminLevel Level =3;
}


message A4AUser
{
	string UserName = 1;
	string Email = 2;
	A4AUserStatus Status = 3;
}

message A4AExpert
{	
	string ExpertName=1;
	string FirstName=2;
	string LastName=3;
	string Email = 4;
	string Mobile=7;
	string CompanyName = 8;

	A4ACompany Company = 9;
}

message A4ASubscription
{
	string Subscription = 1;
	string Profession = 2;
	string Category=3;
	string SubCategory = 4;
	string Location = 5;
	string ExpertName = 6;

}

message A4AProfession 
{
	string Profession =1;
}

message A4ACategory 
{
	string Category=1;
	string Profession = 2;
}

message A4ASubCategory
{
	string SubCategory = 1;
	string Category = 2;
	string Profession = 3;
}

message A4ALocation
{
	string Location=1;
	string SubCategory=2;
	string Category=3;
	string Profession = 4;

}

enum EmailStatus
{
	Created = 0;
	SentMail = 1;
	Replied = 2;
}

message A4AEmailRecord
{
	string EmailRecordId = 1;
	string MessageId = 2;
	string EmailFrom = 3;
	string NameFrom = 4;
	string EmailTo = 5;

	string NameTo = 6;

	string EmailRecordIdRelatedTo = 7;

	EmailStatus Status = 8;

	string ExternalMessageId = 9;

	string ExternalStatus = 10;

	string UpdatedTime = 11;

	string Url = 12;

	string Subject = 13;
}

message A4AMessage
{
	string MessageId=1;

	string Content=2;

	A4AContentType ContentType=3;
	
	string EmailSender = 7;
	
	string Date = 8;

	string Subject = 9;

	string Topic = 10;

}

message AggregateUser
{
	string Email = 1;
	string Name = 2;
	oneof Party
	{
		A4AExpert expert = 3;
		A4AUser user = 4;
		A4AAdministrator admin = 5;
	}
}


message AggregateMessage
{
	string NameFrom = 1;
	string NameTo = 2;
	string EmailFrom=3;
	string EmailTo = 4;
	string UpdatedTime = 5;
	string Subject = 6;
	string MessageId = 7;
	string Content = 8;
	string Topic = 9;
}

message MailboxView
{
	int32 Count = 1;

	MailboxRequest request = 2;

	repeated AggregateMessage Messages = 4;
	repeated AggregateUser Users = 5;


}

message MailboxRequest
{
	int32 Start= 1;
	int32 PageSize=2;
	string Owner = 3;
	A4AUserType UserType = 4;
	A4AMailboxType MailboxType=5;
}


